--- a/researchlog.org
+++ b/researchlog.org
@@ -1,7 +1,10 @@
 #+TITLE: Research Log 
 #+AUTHOR: Victor Gan
 
-* Problems
+
+* <2015-02-26 Thu> 
+  
+I want to install iHaskell and iPython.
 
 * <2015-02-25 Wed>
 
@@ -65,6 +68,22 @@ https://help.github.com/articles/which-remote-url-should-i-use/
 
 So I want to not have to login all the time. To do that I set up an ssh key:
 https://help.github.com/articles/generating-ssh-keys/
+
+Testing. Okay maybe it works, maybe it doesn't.
+
+** Downloading COCO
+Tried. Didn't work because the computer froze.
+
+** Installing Matlab
+From the install file on my external hard drive.
+Ran into this problem:
+http://askubuntu.com/questions/184703/matlab-install-java-permission-denied
+
+Full path of installation folder:
+/usr/local/MATLAB/R2014a
+Did not check "create symbolic links to matlab scripts in
+/usr/local/bin" or any other folder
+
 
 * <2015-02-23 Mon>
    I installed vimperator.
